kube/deploy/apps/immich/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich
  namespace: &app immich
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # # allow pods marked with db label to connect
    # - fromEndpoints:
    #     - matchLabels:
    #         db: pg-default
    #       matchExpressions:
    #         - key: io.kubernetes.pod.namespace
    #           operator: Exists
    #   toPorts:
    #     - ports:
    #         - port: "5432"
    # - fromEndpoints:
    #     - matchLabels:
    #         db.home.arpa/pg: pg-default
    #       matchExpressions:
    #         - key: io.kubernetes.pod.namespace
    #           operator: Exists
    #   toPorts:
    #     - ports:
    #         - port: "5432"
    # # allow operator to connect
    # - fromEndpoints:
    #     - matchLabels:
    #         io.kubernetes.pod.namespace: cnpg
    #         app.kubernetes.io/instance: cloudnative-pg
    #         app.kubernetes.io/name: cloudnative-pg
  egress:
    # allow access to apiserver
    - toEntities:
        - kube-apiserver
    # - toEntities:
    #     - host
    #   toPorts:
    #     - ports:
    #         - port: "6443"
